--- a/TraceIt/TraceIt.csproj
+++ b/TraceIt/TraceIt.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <ProduceReferenceAssembly>true</ProduceReferenceAssembly>
+    <Authors>Caleb Archer</Authors>
+    <Company>Codespace</Company>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -26,13 +28,13 @@
     <PackageReference Include="Plugin.StoreReview" Version="3.0.0-beta" />
     <PackageReference Include="sqlite-net-pcl" Version="1.7.335" />
     <PackageReference Include="SQLiteNetExtensions.Async" Version="2.1.0" />
-    <PackageReference Include="Syncfusion.Licensing" Version="18.3.0.44" />
-    <PackageReference Include="Syncfusion.Xamarin.Buttons" Version="18.3.0.44" />
-    <PackageReference Include="Syncfusion.Xamarin.Core" Version="18.3.0.44" />
-    <PackageReference Include="Syncfusion.Xamarin.SfChart" Version="18.3.0.44" />
-    <PackageReference Include="Syncfusion.Xamarin.SfListView" Version="18.3.0.44" />
-    <PackageReference Include="Syncfusion.Xamarin.SfProgressBar" Version="18.3.0.44" />
-    <PackageReference Include="Syncfusion.Xamarin.SfTabView" Version="18.3.0.44" />
+    <PackageReference Include="Syncfusion.Licensing" Version="18.3.0.48" />
+    <PackageReference Include="Syncfusion.Xamarin.Buttons" Version="18.3.0.48" />
+    <PackageReference Include="Syncfusion.Xamarin.Core" Version="18.3.0.48" />
+    <PackageReference Include="Syncfusion.Xamarin.SfChart" Version="18.3.0.48" />
+    <PackageReference Include="Syncfusion.Xamarin.SfListView" Version="18.3.0.48" />
+    <PackageReference Include="Syncfusion.Xamarin.SfProgressBar" Version="18.3.0.48" />
+    <PackageReference Include="Syncfusion.Xamarin.SfTabView" Version="18.3.0.48" />
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1560" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
