--- a/TraceIt.iOS/Info.plist
+++ b/TraceIt.iOS/Info.plist
@@ -27,7 +27,7 @@
 	<key>CFBundleIdentifier</key>
 	<string>com.codespace.traceit</string>
 	<key>CFBundleVersion</key>
-	<string>1.0</string>
+	<string>1.06</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>CFBundleName</key>
@@ -38,5 +38,7 @@
 	<false/>
 	<key>XSAppIconAssets</key>
 	<string>Media.xcassets/AppIcons.appiconset</string>
+	<key>CFBundleShortVersionString</key>
+	<string>1.06</string>
 </dict>
 </plist>
