--- a/TraceIt/TraceIt.csproj
+++ b/TraceIt/TraceIt.csproj
@@ -25,16 +25,16 @@
     <PackageReference Include="Microsoft.AppCenter" Version="4.1.0" />
     <PackageReference Include="Microsoft.AppCenter.Analytics" Version="4.1.0" />
     <PackageReference Include="Microsoft.AppCenter.Crashes" Version="4.1.0" />
-    <PackageReference Include="Plugin.StoreReview" Version="3.0.0-beta" />
+    <PackageReference Include="Plugin.StoreReview" Version="3.1.0" />
     <PackageReference Include="sqlite-net-pcl" Version="1.7.335" />
     <PackageReference Include="SQLiteNetExtensions.Async" Version="2.1.0" />
-    <PackageReference Include="Syncfusion.Licensing" Version="18.4.0.42" />
-    <PackageReference Include="Syncfusion.Xamarin.Buttons" Version="18.4.0.42" />
-    <PackageReference Include="Syncfusion.Xamarin.Core" Version="18.4.0.42" />
-    <PackageReference Include="Syncfusion.Xamarin.SfChart" Version="18.4.0.42" />
-    <PackageReference Include="Syncfusion.Xamarin.SfListView" Version="18.4.0.42" />
-    <PackageReference Include="Syncfusion.Xamarin.SfProgressBar" Version="18.4.0.42" />
-    <PackageReference Include="Syncfusion.Xamarin.SfTabView" Version="18.4.0.42" />
+    <PackageReference Include="Syncfusion.Licensing" Version="18.4.0.48" />
+    <PackageReference Include="Syncfusion.Xamarin.Buttons" Version="18.4.0.48" />
+    <PackageReference Include="Syncfusion.Xamarin.Core" Version="18.4.0.48" />
+    <PackageReference Include="Syncfusion.Xamarin.SfChart" Version="18.4.0.48" />
+    <PackageReference Include="Syncfusion.Xamarin.SfListView" Version="18.4.0.48" />
+    <PackageReference Include="Syncfusion.Xamarin.SfProgressBar" Version="18.4.0.48" />
+    <PackageReference Include="Syncfusion.Xamarin.SfTabView" Version="18.4.0.48" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
   </ItemGroup>
